[gd_scene load_steps=45 format=3 uid="uid://dp3qj3setksmo"]

[ext_resource type="Script" path="res://Scenes/Scripts/Enemy AI/Mage.gd" id="1_hkm8p"]
[ext_resource type="Texture2D" uid="uid://dwa434vh35bvm" path="res://Sprites/Characters and items/Mage.png" id="2_gm2pm"]
[ext_resource type="Texture2D" uid="uid://br1wcmuv2tn76" path="res://Sprites/Characters and items/Player_shadow.png" id="2_ygq8x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5xtno"]
radius = 84.0
height = 168.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nfhye"]
radius = 91.0
height = 182.0

[sub_resource type="CircleShape2D" id="CircleShape2D_iiktk"]
radius = 1580.42

[sub_resource type="CircleShape2D" id="CircleShape2D_13upx"]
radius = 538.023

[sub_resource type="AtlasTexture" id="AtlasTexture_864w4"]
atlas = ExtResource("2_gm2pm")
region = Rect2(128, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvexi"]
atlas = ExtResource("2_gm2pm")
region = Rect2(160, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_815rw"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy27s"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlsys"]
atlas = ExtResource("2_gm2pm")
region = Rect2(64, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ednd6"]
atlas = ExtResource("2_gm2pm")
region = Rect2(96, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpa3a"]
atlas = ExtResource("2_gm2pm")
region = Rect2(128, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mlii"]
atlas = ExtResource("2_gm2pm")
region = Rect2(160, 39, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljups"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 78, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ib5f"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 78, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_75n0u"]
atlas = ExtResource("2_gm2pm")
region = Rect2(64, 78, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwpig"]
atlas = ExtResource("2_gm2pm")
region = Rect2(96, 78, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t0ph"]
atlas = ExtResource("2_gm2pm")
region = Rect2(160, 78, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_xluug"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5rie"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh1yb"]
atlas = ExtResource("2_gm2pm")
region = Rect2(64, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rvq4"]
atlas = ExtResource("2_gm2pm")
region = Rect2(96, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyhi6"]
atlas = ExtResource("2_gm2pm")
region = Rect2(128, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_48m7a"]
atlas = ExtResource("2_gm2pm")
region = Rect2(160, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qt0u"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 156, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_354ph"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 156, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jgde"]
atlas = ExtResource("2_gm2pm")
region = Rect2(64, 156, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa5q3"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 117, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek0xo"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqlhb"]
atlas = ExtResource("2_gm2pm")
region = Rect2(0, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_btsps"]
atlas = ExtResource("2_gm2pm")
region = Rect2(32, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_74t83"]
atlas = ExtResource("2_gm2pm")
region = Rect2(64, 0, 32, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_i62xa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_864w4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvexi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_815rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy27s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlsys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ednd6")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_gpa3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mlii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljups")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ib5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75n0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwpig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t0ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xluug")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5rie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh1yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rvq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyhi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48m7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qt0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_354ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jgde")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa5q3")
}],
"loop": true,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek0xo")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqlhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btsps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqlhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74t83")
}],
"loop": true,
"name": &"Walking",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_5vjpw"]
length = 2.125
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.75, 2.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spell"
}, {
"args": [],
"method": &"attack_over"
}]
}

[sub_resource type="Animation" id="Animation_i63ah"]
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.8)
}

[sub_resource type="Animation" id="Animation_tkcov"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hurt"]
}

[sub_resource type="Animation" id="Animation_2cu5w"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_rdl3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_cfkm1"]
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walking"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhr27"]
_data = {
"Attack": SubResource("Animation_5vjpw"),
"Death": SubResource("Animation_i63ah"),
"Hurt": SubResource("Animation_tkcov"),
"Idle": SubResource("Animation_2cu5w"),
"RESET": SubResource("Animation_rdl3q"),
"Walking": SubResource("Animation_cfkm1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8syyl"]
bg_color = Color(0.0509804, 0.129412, 0.0470588, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8hku1"]
bg_color = Color(0.360784, 0.556863, 0.168627, 1)

[node name="Mage" type="CharacterBody2D" groups=["Enemy"]]
process_mode = 1
collision_layer = 5
collision_mask = 3
motion_mode = 1
script = ExtResource("1_hkm8p")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(27, 122)
scale = Vector2(10, 10)
texture = ExtResource("2_ygq8x")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.499999, 6)
scale = Vector2(10.85, 13.7)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(25, 25)
collision_mask = 128

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 63)
shape = SubResource("CapsuleShape2D_5xtno")

[node name="Hurt_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0

[node name="Hurtbox_collision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 64)
shape = SubResource("CapsuleShape2D_nfhye")

[node name="Player_Detection_Range" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="Collision_Shape" type="CollisionShape2D" parent="Player_Detection_Range"]
shape = SubResource("CircleShape2D_iiktk")

[node name="PLayer_Too_Close_Range" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="Collision_Shape_2" type="CollisionShape2D" parent="PLayer_Too_Close_Range"]
shape = SubResource("CircleShape2D_13upx")

[node name="Mage_Sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_i62xa")
animation = &"Death"
autoplay = "Idle"

[node name="Spell_Spawner" type="Marker2D" parent="."]
position = Vector2(-76, -64)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Mage_Sprite")
libraries = {
"": SubResource("AnimationLibrary_hhr27")
}
autoplay = "Idle"

[node name="Health_metre" type="ProgressBar" parent="."]
offset_left = -52.0
offset_top = 156.0
offset_right = 52.0
offset_bottom = 164.0
theme_override_styles/background = SubResource("StyleBoxFlat_8syyl")
theme_override_styles/fill = SubResource("StyleBoxFlat_8hku1")
max_value = 12.0
value = 6.0
show_percentage = false

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
